# Criminal-project

./: .buildpacks  .dockerignore  .gitignore  .render-buildpacks  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  SETUP_GUIDE.md  TESTSPRITE_EXAMPLE.md  build.sh  debug_face_matching.py  debug_matching.py  manage.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg  setup.py  test.csv  test_app.py  test_confidence.py  test_criminal_detection.py  test_detection.py  test_detection_functionality.py  test_docker.py  test_face_detection.py  test_matching.py  test_render_setup.py  test_setup.py
criminal_detection_system/: asgi.py  settings.py  urls.py  wsgi.py
detection/: admin.py  apps.py  models.py  urls.py  views.py
detection/management/commands/: check_db.py  clear_database.py  fix_confidence.py  init_data.py  populate_criminals.py
detection/migrations/: 0001_initial.py  0002_alter_detectionresult_face_coordinates.py  0003_detectionresult_is_correct_and_more.py
static/css/: custom.css
static/js/: camera.js  custom.js
staticfiles/images/: logo.txt
staticfiles/js/: custom.js
templates/detection/: base.html  camera.html  citizen_dashboard.html  login.html  police_dashboard.html  police_login.html  register.html
testsprite_tests/: simple_test_plan.json  standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_backend_test_plan.json
testsprite_tests/tmp/: code_summary.json  config.json
